src/objects/Skill__c.object
<CustomObject>
    <description>To capture the skills of resources</description>
    <fields>
        <fullName>Certification_name__c</fullName>
        <description>Certification required for the skill</description>
        <inlineHelpText>Certification required for the skill</inlineHelpText>
        <label>Certification name</label>
        <picklist>
            <picklistValues>
                <fullName>SFDC ADM - 201</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFDC ADM - 301</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFDC DEV - 401</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFDC DEV - 501</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Desscription about skills</description>
        <inlineHelpText>Desscription about skills</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Skill_Name__c</fullName>
        <description>Name of the skill</description>
        <inlineHelpText>Name of the skill</inlineHelpText>
        <label>Skill Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the skill</description>
        <inlineHelpText>Status of the skill</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Skill</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Skill_Name__c</columns>
        <columns>Description__c</columns>
        <columns>Certification_name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Testing_data</fullName>
        <columns>NAME</columns>
        <columns>Certification_name__c</columns>
        <columns>Description__c</columns>
        <columns>Skill_Name__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>tgre1</value>
        </filters>
        <label>Testing data</label>
    </listViews>
    <nameField>
        <displayFormat>SN-{0000}</displayFormat>
        <label>Skill No</label>
        <type>AutoNumber</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01Id00000019ka8EAA_00Nd0000005XVe8EAG</fullName>
        <active>true</active>
        <field>SkillProfie__c.Skill_No__c</field>
        <filterItems>
            <field>Skill__c.Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>SkillProfie_Skill #</name>
    </namedFilters>
    <pluralLabel>Skills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>